--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoreAndroid"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".ui.splash.SplashActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+<!--        <activity-->
+<!--            android:name=".ui.article.ArticleActivity"-->
+<!--            android:exported="false">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
         <activity
             android:name=".ui.setting.SettingActivity"
             android:exported="false">
@@ -42,7 +42,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".ui.article.ArticleActivity"
+            android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
