--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoreAndroid"
         android:usesCleartextTraffic="true">
-
+<!--        <activity-->
+<!--            android:name=".ArticleDetailActivity"-->
+<!--            android:exported="false">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
         <!-- <activity -->
         <!-- android:name=".ui.article.ArticleActivity" -->
         <!-- android:exported="false"> -->
