--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
     id 'com.google.dagger.hilt.android'
@@ -25,6 +26,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [useesCleartextTraffic: false, crashlyticsEnabled: true, performanceEnabled: true]
+        }
+        debug {
+            debuggable true
+            manifestPlaceholders = [useesCleartextTraffic: false, crashlyticsEnabled: true, performanceEnabled: true]
         }
     }
     compileOptions {
@@ -67,5 +73,9 @@ dependencies {
 
     //Biometric
     implementation 'androidx.biometric:biometric:1.1.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
 }
