--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //Biometric
     implementation 'androidx.biometric:biometric:1.1.0'
@@ -77,5 +77,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+    //Slider
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
 }
