--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
     dependencies {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
     }
